# side-quests

./: gemini.md  readme.md
arduino-buzz-game/: buzz-game.ino  readme.md
arduino-buzz-game/buzz-game/: buzz-game.ino
arduino-buzz-game/buzz-game-neopixel/: buzz-game-neopixel.ino
arduino-buzz-game/buzz-game-neopixel - Working/: buzz-game-neopixel.ino
arduino-buzz-game/mario-theme/: index.html  mario-theme.ino  mario-theme.json  play-theme.js
arduino-buzz-game/neo-pixel/: neo-pixel.ino
arduino-buzz-game/neo-test/: neo-test.ino
arduino-buzz-game/segment-display/: segment-display.ino
audiobook-m4b-normalizer/: .gitignore  gemini.md  normalize-audiobooks.py  normalize_audiobooks.py  readme.md  session-summary.md
aws-session-depaginator/: fetch_sessions.py  find_sessions.py  insights_and_queries.md  locations.txt  session_types.txt  sessions.jsonl  single-structure.json  top_words.py  weird_words.py
aws-session-depaginator/references/: request-response-info.txt
axios-compromise-detector/: AXIOS_DETECTOR_README.md  README.md  axios-compromise-detector.js
easy-heic-to-jpeg/: README.md  easy-heic-to-jpeg.py
makey-makey-pstv-compatibility/: readme.md
pico-dual-boot-arcade-stick/: readme.md
pico-dual-boot-arcade-stick/1_pico-hid-arcade-stick/: CMakeLists.txt  README.md
pico-dual-boot-arcade-stick/1_pico-hid-arcade-stick/src/: keyboard_arcade.c
pico-dual-boot-arcade-stick/2_pico-hid-arcade-dualboot_poc/: CMakeLists.txt  README.md  pico_sdk_import.cmake
pico-dual-boot-arcade-stick/2_pico-hid-arcade-dualboot_poc/src/: keyboard_arcade.c
(+4 files in other folders)
